--- a/styles/light.css
+++ b/styles/light.css
@@ -10,3 +10,22 @@
     чем стили в медиазапросе предпочтений пользователя
   */
 }
+
+:root.theme-light {
+  --main-color:#353430;
+  --accent-color:#FF8DCB;
+  --bg-color: #FFF1F7;
+  --main-font: 'IBM Plex mono';   
+}
+
+/* Остальные стили */
+
+@media (prefers-color-scheme: light) {
+  :root {
+    --main-color:#353430;
+    --accent-color:#FF8DCB;
+    --bg-color: #FFF1F7;
+    --main-font: 'IBM Plex mono';   
+    }
+}
+/* Остальные стили */
