--- a/styles/dark.css
+++ b/styles/dark.css
@@ -5,8 +5,8 @@
 */
 
 .page.theme_dark {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+  --main-color:#F1B2CE;
+  --accent-color:#FF0070;
+  --bg-color: #000028;
+  --main-font: 'IBM Plex mono';
 }
