--- a/styles/style.css
+++ b/styles/style.css
@@ -3,3 +3,457 @@
 .page {
   /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
 }
+
+body{
+  padding: 0;
+  background-color: var(--bg-color);
+  font-family: var(--main-font);
+}
+
+.header__bg{
+  background-image: url(/images/cover-image-dark.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: grid;
+  position: relative;
+  height: 768px;
+  grid-template-rows: repeat(3, 1fr);
+  padding-inline-end: 20px;
+}
+
+.header__bg::after,.header__bg::before{
+  content: '';
+  position: absolute;
+  width: 25px;
+  height: 25px;
+  border: 1px solid var(--accent-color);
+}
+
+.header__bg::after{
+  right: 20px;
+  top: 20px;
+  border-block-end:0px;
+  border-inline-start:0px ;
+}
+
+.header__bg::before{
+  left: 20px;
+  bottom: 20px;
+  border-block-start:0px ;
+  border-inline-end: 0px;
+}
+
+header{
+  position: relative;
+  display: flex;
+  margin-block-start: 20px;
+}
+
+.header__theme-menu{
+  margin: 0 auto;
+  padding-inline-start: 20px;
+}
+
+.header__theme-menu-list{
+  display: flex;
+  gap: 10px;
+  justify-content: center;
+  padding: 0;
+  margin: 0;
+}
+
+.header__theme-menu-button{
+  color: var(--accent-color);
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  text-transform: lowercase;
+  font-family: var(--main-font);
+  padding: 3.5px 13px;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 18px;
+  text-align: center;
+
+}
+
+.header__theme-menu-button_active{
+  border: 1px solid var(--accent-color);
+}
+
+.header__theme-menu-item{
+  list-style: none;
+}
+
+.theme__dark-subtext{
+  position: absolute;
+  color: var(--accent-color);
+  font-size: 18px;
+  line-height: 25px;
+  font-weight: 400;
+  right: 28px;
+  
+}
+
+.theme__dark-subtext::after{
+  content: '';
+  position: absolute;
+  width: 9px;
+  height: 9px;
+  border-radius: 50%;
+  box-shadow: 0px 0px 4px 2px var(--accent-color);
+  margin: 8px 0 0 10px;
+  background-color: var(--accent-color);
+  border-top: 1px;
+  border-right: 1px;
+  border-color: var(--accent-color);
+}
+
+.header__title{
+  color: #DB00FF;
+  font-size:clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  line-height:129px;
+  font-weight: 700;
+  align-content: center;
+}
+
+.title_decor{
+  text-shadow: 4px 4px 0 var(--accent-color);
+}
+
+.header__title-blockquote{
+  background-color: var(--accent-color);
+  color: var(--bg-color);
+  width: 49%;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 23.4px;
+  align-self: flex-start;
+  justify-self: flex-end;
+  margin-top: 50px;
+}
+
+
+.content{
+  display: flex;
+  flex-direction: column;
+  gap: 80px;
+  margin:60px 20px;
+}
+
+.main__title{
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 23.4px;
+  color: var(--accent-color);
+}
+
+.intro-card{
+  grid-column: 2/4;
+}
+
+.card{
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.card_title{
+  color: var(--bg-color);
+  width: 100%;
+  background-color: var(--accent-color);
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 23.4px;
+}
+
+.card_subtitle{
+  color: var(--main-color);
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 23.4px;
+}
+
+.intro__part{
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  gap: 20px;
+}
+
+.intro__title{
+ grid-row: 1/3;
+}
+
+.concentration__part{
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 47px;
+  gap: 20px;
+  grid-auto-flow: row;
+}
+
+.concentration__title{
+  grid-row: 1/2;
+  grid-column: 1/4;
+}
+
+.methods__part{
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+}
+
+.methods__title{
+  width: 33%;
+}
+
+.methods__card-list{
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  width: 68%;
+}
+
+.method__card-list-title{
+  font-weight: 700;
+}
+
+.images__part{
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.images__box{
+  display: grid;
+  grid-template-columns: repeat(3, 315px);
+  grid-template-rows: 260px 315px 428px;
+  gap: 22px 20px;
+  grid-auto-flow: row;
+}
+
+.center__box{
+  grid-column: 2/3;
+  grid-row: 2/3;
+}
+
+.left-top__box{
+  grid-column: 1/3;
+  grid-row: 1/2;
+}
+
+.short__box{
+  grid-column: 3/4;
+  grid-row: 1/3;
+}
+
+.long__box{
+  grid-column: 1/2;
+  grid-row: 2/4;
+}
+
+.big__box{
+  grid-column: 2/4;
+  grid-row: 3/4;
+}
+
+.images__box img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+
+.footer{
+  height: 768px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+
+.footer .title_decor{
+  text-shadow: 2px 2px var(--accent-color);
+}
+
+.footer::after,.footer::before{
+  content: '';
+  position: absolute;
+  width: 25px;
+  height: 25px;
+  border: 1px solid var(--accent-color);
+}
+
+.footer::after{
+  right: 20px;
+  top: 20px;
+  border-block-end:0px;
+  border-inline-start:0px ;
+}
+
+.footer::before{
+  left: 20px;
+  bottom: 20px;
+  border-block-start:0px ;
+  border-inline-end: 0px;
+}
+
+.link:hover{
+  border-bottom: 1px solid currentColor;
+}
+
+.link{
+  text-shadow: 2px 2px 0 var(--accent-color);
+}
+
+@media (max-width: 768px){
+  .header__bg{
+    height: 1024px;
+    padding-inline-end: 20px;
+  }
+
+  .images__box{
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 192px 230px 318px;
+    gap: 20px;
+  }
+
+  .header__theme-menu-list{
+    justify-content: flex-end;
+    align-self: flex-end;
+  }
+
+  .header__theme-menu{
+    margin: 0;
+    align-self: flex-end;
+    
+  }
+
+  .header__theme-menu-list{
+    flex-direction: column;
+    margin-bottom: 53px;
+  }
+
+  .header{
+    justify-content: flex-end;
+  }
+
+  .header__title-blockquote{
+    margin-top: 41px;
+  }
+
+  .intro__part{
+    gap: 20px 40px;
+  }
+
+  .concentration__part{
+    grid-template-columns:repeat(3, 1fr);
+    grid-template-rows: 1fr;
+  }
+
+  .concentration__card{
+    grid-column: 1/4;
+  }
+
+  .concentration__title{
+    width: 236px;
+  }
+  
+  .methods__part{
+    gap: 27px;
+  }
+
+  .footer{
+    height: 1024px;
+  }
+}
+
+@media (max-width: 376px){
+  .header__bg{
+    height: 668px;
+    padding:0 10px;
+  }
+
+  .images__box{
+    display: flex;
+    flex-direction: column;
+    gap: 9px;
+  }
+
+  .header__title{
+    font-size: 116px;
+    Line-height:95.7px;
+  }
+
+  .header__theme-menu-list{
+    margin-bottom: 48px;
+  }
+
+  .header__title-blockquote{
+    width: 100%;
+  }
+
+  .content{
+    margin: 40px 10px;
+    gap: 50px;
+  }
+
+  .intro__part{
+    grid-template-columns: 1fr;
+    grid-template-rows: 47px repeat(2, 1fr);
+  }
+
+  .intro-card{
+    grid-column: inherit;
+  }
+
+  .intro__title{
+    grid-row: inherit;
+  }
+  
+  .concentration__title{
+    width: 100%;
+  }
+
+  .concentration__part{
+    grid-template-rows: 47px;
+  }
+
+  .methods__part{
+    flex-direction: column;
+    gap: 19px;
+  }
+
+  .methods__title{
+    width: 100%;
+  }
+
+  .methods__card-list{
+    width: 100%;
+  }
+
+  .images__part{
+    gap: 10px;
+  }
+
+  .footer{
+    height: 668px;
+  }
+
+  .theme__dark-subtext{
+    top: -10px;
+  }
+
+  .footer::after,.header__bg::after{
+    right: 10px;
+    top: 10px;
+  }
+
+  .footer::before,.header__bg::before{
+    left: 10px;
+    bottom: 10px;
+  }
+}
+
