--- a/styles/variables.css
+++ b/styles/variables.css
@@ -4,8 +4,8 @@
 */
 
 :root {
-  --main-color:#F1B2CE;
-  --accent-color:#FF0070;
-  --bg-color: #00183F;
-  --main-font: 'IBM Plex mono';
+  --main-color: #f1b2ce;
+  --accent-color: #ff0070;
+  --bg-color: #00183f;
+  --main-font: "IBM Plex mono";
 }
