--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,7 +13,7 @@ body {
   padding: 0;
 }
 
-a{
+a {
   text-decoration: none;
 }
 
@@ -28,7 +28,8 @@ blockquote {
   margin: 0;
 }
 
-ul, li {
+ul,
+li {
   margin: 0;
   padding: 0;
   list-style: none;
