--- a/styles/style.css
+++ b/styles/style.css
@@ -4,14 +4,14 @@
   /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
 }
 
-body{
+body {
   padding: 0;
   background-color: var(--bg-color);
   font-family: var(--main-font);
   background-attachment: fixed;
 }
 
-.header__bg{
+.header__bg {
   background-image: url(/images/cover-image-dark.png);
   background-position: center;
   background-repeat: no-repeat;
@@ -23,44 +23,45 @@ body{
   padding-inline-end: 20px;
 }
 
-.header__bg::after,.header__bg::before{
-  content: '';
+.header__bg::after,
+.header__bg::before {
+  content: "";
   position: absolute;
   width: 25px;
   height: 25px;
   border: 1px solid var(--accent-color);
 }
 
-.header__bg::after{
+.header__bg::after {
   right: 20px;
-  border-block-end:0px;
-  border-inline-start:0px ;
+  border-block-end: 0px;
+  border-inline-start: 0px;
 }
 
-.header__bg::before{
+.header__bg::before {
   left: 20px;
   bottom: 20px;
-  border-block-start:0px ;
+  border-block-start: 0px;
   border-inline-end: 0px;
 }
 
-header{
+header {
   position: relative;
   display: flex;
   margin-block-start: 20px;
   height: 100vh;
 }
 
-.decorated-zone{
+.decorated-zone {
   display: flex;
 }
 
-.header__theme-menu{
+.header__theme-menu {
   margin: 0 auto;
   padding-inline-start: 20px;
 }
 
-.header__theme-menu-list{
+.header__theme-menu-list {
   display: flex;
   gap: 10px;
   justify-content: center;
@@ -68,7 +69,7 @@ header{
   margin: 0;
 }
 
-.header__theme-menu-button{
+.header__theme-menu-button {
   color: var(--accent-color);
   background-color: transparent;
   border: none;
@@ -80,29 +81,27 @@ header{
   font-weight: 400;
   line-height: 18px;
   text-align: center;
-
 }
 
-.header__theme-menu-button_active{
+.header__theme-menu-button_active {
   border: 1px solid var(--accent-color);
 }
 
-.header__theme-menu-item{
+.header__theme-menu-item {
   list-style: none;
 }
 
-.theme__dark-subtext{
+.theme__dark-subtext {
   position: absolute;
   color: var(--accent-color);
   font-size: 18px;
   line-height: 25px;
   font-weight: 400;
   right: 48px;
-  
 }
 
-.theme__dark-subtext::after{
-  content: '';
+.theme__dark-subtext::after {
+  content: "";
   position: absolute;
   width: 9px;
   height: 9px;
@@ -115,19 +114,19 @@ header{
   border-color: var(--accent-color);
 }
 
-.header__title{
-  color: #DB00FF;
-  font-size:clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
-  line-height:129px;
+.header__title {
+  color: #db00ff;
+  font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  line-height: 129px;
   font-weight: 700;
   align-content: center;
 }
 
-.title_decor{
+.title_decor {
   text-shadow: 4px 4px 0 var(--accent-color);
 }
 
-.header__title-blockquote{
+.header__title-blockquote {
   background-color: var(--accent-color);
   color: var(--bg-color);
   width: 49%;
@@ -139,32 +138,31 @@ header{
   margin-top: 50px;
 }
 
-
-.content{
+.content {
   display: flex;
   flex-direction: column;
   gap: 80px;
-  margin:60px 20px;
+  margin: 60px 20px;
 }
 
-.main__title{
+.main__title {
   font-weight: 700;
   font-size: 18px;
   line-height: 23.4px;
   color: var(--accent-color);
 }
 
-.intro-card{
+.intro-card {
   grid-column: 2/4;
 }
 
-.card{
+.card {
   display: flex;
   flex-direction: column;
   gap: 10px;
 }
 
-.card_title{
+.card_title {
   color: var(--bg-color);
   width: 100%;
   background-color: var(--accent-color);
@@ -173,25 +171,25 @@ header{
   line-height: 23.4px;
 }
 
-.card_subtitle{
+.card_subtitle {
   color: var(--main-color);
   font-weight: 700;
   font-size: 18px;
   line-height: 23.4px;
 }
 
-.intro__part{
+.intro__part {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(2, 1fr);
   gap: 20px;
 }
 
-.intro__title{
- grid-row: 1/3;
+.intro__title {
+  grid-row: 1/3;
 }
 
-.concentration__part{
+.concentration__part {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: 47px;
@@ -199,39 +197,39 @@ header{
   grid-auto-flow: row;
 }
 
-.concentration__title{
+.concentration__title {
   grid-row: 1/2;
   grid-column: 1/4;
 }
 
-.methods__part{
+.methods__part {
   display: flex;
   flex-direction: row;
   gap: 20px;
 }
 
-.methods__title{
+.methods__title {
   width: 33%;
 }
 
-.methods__card-list{
+.methods__card-list {
   display: flex;
   flex-direction: column;
   gap: 20px;
   width: 68%;
 }
 
-.method__card-list-title{
+.method__card-list-title {
   font-weight: 700;
 }
 
-.images__part{
+.images__part {
   display: flex;
   flex-direction: column;
   gap: 20px;
 }
 
-.images__box{
+.images__box {
   display: grid;
   grid-template-columns: repeat(3, 315px);
   grid-template-rows: 260px 315px 428px;
@@ -239,27 +237,27 @@ header{
   grid-auto-flow: row;
 }
 
-.center__box{
+.center__box {
   grid-column: 2/3;
   grid-row: 2/3;
 }
 
-.left-top__box{
+.left-top__box {
   grid-column: 1/3;
   grid-row: 1/2;
 }
 
-.short__box{
+.short__box {
   grid-column: 3/4;
   grid-row: 1/3;
 }
 
-.long__box{
+.long__box {
   grid-column: 1/2;
   grid-row: 2/4;
 }
 
-.big__box{
+.big__box {
   grid-column: 2/4;
   grid-row: 3/4;
 }
@@ -270,8 +268,7 @@ header{
   object-fit: cover;
 }
 
-
-.footer{
+.footer {
   height: 768px;
   display: flex;
   align-items: center;
@@ -279,186 +276,184 @@ header{
   position: relative;
 }
 
-.footer .title_decor{
+.footer .title_decor {
   text-shadow: 2px 2px var(--accent-color);
 }
 
-.footer::after,.footer::before{
-  content: '';
+.footer::after,
+.footer::before {
+  content: "";
   position: absolute;
   width: 25px;
   height: 25px;
   border: 1px solid var(--accent-color);
 }
 
-.footer::after{
+.footer::after {
   right: 20px;
   top: 20px;
-  border-block-end:0px;
-  border-inline-start:0px ;
+  border-block-end: 0px;
+  border-inline-start: 0px;
 }
 
-.footer::before{
+.footer::before {
   left: 20px;
   bottom: 20px;
-  border-block-start:0px ;
+  border-block-start: 0px;
   border-inline-end: 0px;
 }
 
-.link:hover{
+.link:hover {
   border-bottom: 1px solid currentColor;
 }
 
-.link{
+.link {
   text-shadow: 2px 2px 0 var(--accent-color);
 }
 
-@media (max-width: 768px){
-  .header__bg{
+@media (max-width: 768px) {
+  .header__bg {
     height: 1024px;
     padding-inline-end: 20px;
   }
 
-  .images__box{
+  .images__box {
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: 192px 230px 318px;
     gap: 20px;
   }
 
-  .header__theme-menu-list{
+  .header__theme-menu-list {
     justify-content: flex-end;
     align-self: flex-end;
-  }
-
-  .header__theme-menu{
-    margin: 0;
-    align-self: flex-end;
-    
-  }
-
-  .header__theme-menu-list{
     flex-direction: column;
     margin-bottom: 53px;
   }
 
-  .header{
+  .header__theme-menu {
+    margin: 0;
+    align-self: flex-end;
+  }
+
+  .header {
     justify-content: flex-end;
   }
 
-  .header__title-blockquote{
+  .header__title-blockquote {
     margin-top: 41px;
   }
 
-  .intro__part{
+  .intro__part {
     gap: 20px 40px;
   }
 
-  .concentration__part{
-    grid-template-columns:repeat(3, 1fr);
+  .concentration__part {
+    grid-template-columns: repeat(3, 1fr);
     grid-template-rows: 1fr;
   }
 
-  .concentration__card{
+  .concentration__card {
     grid-column: 1/4;
   }
 
-  .concentration__title{
+  .concentration__title {
     width: 236px;
   }
-  
-  .methods__part{
+
+  .methods__part {
     gap: 27px;
   }
 
-  .footer{
-    height: 1024px;
+  .footer {
+    height: 100vh;
   }
 }
 
-@media (max-width: 376px){
-  .header__bg{
+@media (max-width: 376px) {
+  .header__bg {
     height: 668px;
-    padding:0 10px;
+    padding: 0 10px;
   }
 
-  .images__box{
+  .images__box {
     display: flex;
     flex-direction: column;
     gap: 9px;
   }
 
-  .header__title{
+  .header__title {
     font-size: 116px;
-    Line-height:95.7px;
+    line-height: 95.7px;
   }
 
-  .header__theme-menu-list{
+  .header__theme-menu-list {
     margin-bottom: 48px;
   }
 
-  .header__title-blockquote{
+  .header__title-blockquote {
     width: 100%;
   }
 
-  .content{
+  .content {
     margin: 40px 10px;
     gap: 50px;
   }
 
-  .intro__part{
+  .intro__part {
     grid-template-columns: 1fr;
     grid-template-rows: 47px repeat(2, 1fr);
   }
 
-  .intro-card{
+  .intro-card {
     grid-column: inherit;
   }
 
-  .intro__title{
+  .intro__title {
     grid-row: inherit;
   }
-  
-  .concentration__title{
+
+  .concentration__title {
     width: 100%;
   }
 
-  .concentration__part{
+  .concentration__part {
     grid-template-rows: 47px;
   }
 
-  .methods__part{
+  .methods__part {
     flex-direction: column;
     gap: 19px;
   }
 
-  .methods__title{
+  .methods__title {
     width: 100%;
   }
 
-  .methods__card-list{
+  .methods__card-list {
     width: 100%;
   }
 
-  .images__part{
+  .images__part {
     gap: 10px;
   }
 
-  .footer{
+  .footer {
     height: 668px;
   }
 
-  .theme__dark-subtext{
+  .theme__dark-subtext {
     top: -10px;
   }
 
-  .footer::after,.header__bg::after{
+  .footer::after,
+  .header__bg::after {
     right: 10px;
     top: 10px;
   }
 
-  .footer::before,.header__bg::before{
+  .footer::before,
+  .header__bg::before {
     left: 10px;
     bottom: 10px;
   }
 }
-
