--- a/styles/light.css
+++ b/styles/light.css
@@ -5,17 +5,34 @@
 */
 
 .page.theme_light {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+  background-image: url(../images/cover-image-light.png);
+}
+
+.theme_light .theme__dark-subtext{
+  display: none;
 }
 
 :root.theme-light {
   --main-color: #353430;
-  --accent-color: #ff8dcb;
-  --bg-color: #fff1f7;
+  --accent-color: #FF8DCB;
+  --bg-color: #353430;
   --main-font: "IBM Plex mono";
+}
+
+.theme_light .header__theme-menu-button{
+  color: var(--main-color);
+}
+
+.theme_light .header__title{
+  color: #FFC2E6;
+}
+
+.theme_light .header__theme-menu{
+  padding-inline-start: 20px;
+}
+
+.theme_light .main__title{
+  color: var(--main-color);
 }
 
 /* Остальные стили */
@@ -24,8 +41,12 @@
   :root {
     --main-color: #353430;
     --accent-color: #ff8dcb;
-    --bg-color: #fff1f7;
+    --bg-color: #353430;
     --main-font: "IBM Plex mono";
+  }
+
+  body{
+    background-image: url(../images/cover-image-light.png);
   }
 }
 /* Остальные стили */
