--- a/styles/variables.css
+++ b/styles/variables.css
@@ -4,8 +4,8 @@
 */
 
 :root {
-  --main-color: #f1b2ce;
-  --accent-color: #ff0070;
-  --bg-color: #00183f;
-  --main-font: "IBM Plex mono";
+  --main-color: #353430;
+  --accent-color: #FF8DCB;
+  --bg-color: #353430;
+  --main-font: "IBM Plex mono"
 }
