--- a/styles/variables.css
+++ b/styles/variables.css
@@ -4,8 +4,8 @@
 */
 
 :root {
-  --main-color:#F1B2CE;
-  --accent-color:#FF0070;
+  --main-color: #f1b2ce;
+  --accent-color: #ff0070;
   --bg-color: #000028;
-  --main-font: 'IBM Plex mono'
+  --main-font: "IBM Plex mono";
 }
