--- a/styles/style.css
+++ b/styles/style.css
@@ -24,7 +24,7 @@ body {
 }
 
 .decorated-zone::after,
-.decorated-zone::before{
+.decorated-zone::before {
   content: "";
   position: absolute;
   width: 25px;
@@ -115,7 +115,8 @@ header {
   border-color: var(--accent-color);
 }
 
-.header__title {
+.title_decor {
+  text-shadow: 4px 4px 0 #ff0070;
   color: var(--header-title-color);
   font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
   line-height: 129px;
@@ -123,8 +124,8 @@ header {
   align-content: center;
 }
 
-.title_decor {
-  text-shadow: 4px 4px 0 #ff0070;
+.decor {
+  text-shadow: 2px 2px 0 #ff0070;
 }
 
 .header__title-blockquote {
@@ -238,12 +239,8 @@ header {
   grid-auto-flow: row;
 }
 
-.footer_title{
-  color: var(--header-title-color);
-  font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
-  line-height: 129px;
-  font-weight: 700;
-  align-content: center;
+.footer_title {
+  text-shadow: 2px 2px #ff0070;
 }
 
 .center__box {
@@ -286,14 +283,9 @@ header {
   position: relative;
 }
 
-.footer .title_decor {
-  text-shadow: 2px 2px #ff0070;
-}
-
 .methods__card_title {
   font-weight: 400;
 }
-
 
 .link:hover {
   border-bottom: 1px solid currentColor;
@@ -304,7 +296,7 @@ header {
 }
 
 .header__theme-menu-button:hover {
-  border:var(--border-menu-button-opacity);
+  border: var(--border-menu-button-opacity);
 }
 
 .header__theme-menu-button:focus-visible {
@@ -401,7 +393,7 @@ header {
     gap: 9px;
   }
 
-  .header__title {
+  .title_decor {
     font-size: 116px;
     line-height: 95.7px;
   }
@@ -461,7 +453,7 @@ header {
     top: -10px;
   }
 
-  .decorated-zone::after{
+  .decorated-zone::after {
     right: 10px;
     top: 10px;
   }
@@ -471,9 +463,7 @@ header {
     bottom: 10px;
   }
 
-  .header__menu{
+  .header__menu {
     margin-block-start: 10px;
   }
 }
-
-
