--- a/styles/light.css
+++ b/styles/light.css
@@ -4,18 +4,20 @@
   переключая тему
 */
 
-:root.theme-light {
+.page.theme_light {
   --main-color: #353430;
   --accent-color: #ff8dcb;
   --bg-theme-img: url(../images/cover-image-light.png);
   --bg-color: #353430;
   --main-font: "IBM Plex mono";
-  --header-title: #ffc2e6;
-  --header-menu-button: #353430;
-  --main-title: #353430;
+  --header-title-color: #ffc2e6;
+  --header-theme-menu-padding: 20px;
+  --header-menu-button-color: #353430;
+  --main-title-color: #353430;
   --rec-display: none;
   --border-menu-button-opacity: 1px solid #32312d66;
   --header-menu-position: center;
+  --decor-arrow-color: #353430;
 }
 
 /* Остальные стили */
@@ -33,26 +35,7 @@
     --main-title-color: #353430;
     --rec-display: none;
     --border-menu-button-opacity: 1px solid #32312d66;
-  }
-
-  body.theme_auto {
-    background-image: var(--bg-theme-img);
-  }
-
-  .theme_auto .theme__dark-subtext {
-    display: var(--rec-display);
-  }
-
-  .theme_auto .header__title {
-    color: var(--header-title-color);
-  }
-
-  .theme_auto .header__theme-menu-button {
-    color: var(--header-menu-button-color);
-  }
-
-  .theme_auto .main__title {
-    color: var(--main-title-color);
+    --decor-arrow-color: #353430;
   }
 }
 
