--- a/styles/variables.css
+++ b/styles/variables.css
@@ -16,4 +16,5 @@
   --rec-display: block;
   --border-menu-button-opacity: 1px solid #ff007066;
   --header-menu-position: none;
+  --decor-arrow-color: #ff0070;
 }
