--- a/styles/style.css
+++ b/styles/style.css
@@ -29,7 +29,7 @@ body {
   position: absolute;
   width: 25px;
   height: 25px;
-  border: 1px solid var(--accent-color);
+  border: 1px solid var(--decor-arrow-color);
 }
 
 .decorated-zone::after {
@@ -358,10 +358,12 @@ header {
 
   .header__title-blockquote {
     margin-top: 41px;
+    min-width: 305px;
   }
 
   .intro__part {
     gap: 20px 40px;
+    grid-template-columns: 124px 1fr 1fr;
   }
 
   .concentration__part {
